create private util function